# rust-webgpu-test

./: Cargo.toml  INSIGHTS.md  README.md
examples/: mp4_renderer.rs
js/: circles.js  clip_and_mask.js  complex-drawing.js  dash_options.js  empty.js  group.js  group_transform.js  miter_limit.js  object_transform.js  outline.js  paths.js  polygons.js  rd.js  stroke_options.js  text_path.js  text_raw.js  z-test.js
resources/: cube.wgsl  video.wgsl
src/: camera.rs  camera_controller.rs  camera_utils.rs  canvas.rs  chunk.rs  cube.rs  egui_tools.rs  example.rs  fs_utils.rs  gizmo_example.rs  gpu.rs  gpu_utils.rs  gui.rs  gui_utils.rs  js.rs  main.rs  multimath.rs  paint_utils.rs  shared.rs  thread_utils.rs  video_example.rs  window.rs
src/demos/: chunk.rs  mod.rs  video.rs
src/frontend/: code_view.rs  custom_view.rs  fancy_view.rs  mod.rs  quick_view.rs  regular_view.rs  world_view.rs
src/gpu/: buffer.rs  ctx.rs  mod.rs  sampler.rs  texture.rs  view.rs
src/pipelines/: mod.rs  quad_mesh.rs  video.rs  video.wgsl
src/video/: a.txt  decoder.rs  decoder_thread.rs  mod.rs  reader.rs  video_handle.rs
