[package]
name = "pony-renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = { version = "0.19" }
winit = "0.29"
imgui = "0.12"
imgui-wgpu = { git = "https://github.com/mkrasnitski/imgui-wgpu-rs.git", branch = "master" }
imgui-winit-support = "0.12"
bytemuck = { version = "1.13", features = ["derive"] }
pollster = "0.3"
cgmath = "0.18"
env_logger = "0.10"
skia-safe = {version = "0.75.0", features = ["textlayout"]}
rquickjs = {version = "0.6.2", features = ["macro", "rust-alloc", "loader", "dyn-load"]}
bitflags = "2.6"
noise = "0.9.0"
ffmpeg-next = "7.1.0"
mp4 = { git = "https://github.com/membraneframework-labs/mp4-rust.git", branch = "preserve-asc" }
bytes = "1.4.0"
crossbeam-channel = "0.5.13"
tracing = "0.1.40"
thiserror = "1.0.40"

[profile.release]
debug = 1

[[example]]
name = "mp4"
path = "examples/mp4_renderer.rs"
