[package]
name = "pony-renderer"
version = "0.1.0"
edition = "2021"

[dependencies]

bytemuck = { version = "1.13", features = ["derive"] }
pollster = "0.3"
cgmath = "0.18"
env_logger = "0.10"
skia-safe = {version = "0.75.0", features = ["textlayout"]}
rquickjs = {version = "0.6.2", features = ["macro", "rust-alloc", "loader", "dyn-load"]}
bitflags = "2.6"
noise = "0.9.0"
ffmpeg-next = "7.1.0"
mp4 = { git = "https://github.com/membraneframework-labs/mp4-rust.git", branch = "preserve-asc" }
bytes = "1.4.0"
crossbeam-channel = "0.5.13"
tracing = "0.1.40"
thiserror = "1.0.40"
egui = "0.29.1"
egui-wgpu = { version = "0.29.0", features = ["winit"] }
egui-winit = "0.29.0"
winit = { version = "0.30.5" }
windows-sys = "0.52"
transform-gizmo-egui = "0.4.0"
rand = "0.8.5"

[profile.release]
debug = 1

[dependencies.wgpu-core]
version="22.1.0"
features = ["metal", "wgsl"]

[[example]]
name = "mp4"
path = "examples/mp4_renderer.rs"
